--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <script   src="http://code.jquery.com/jquery-2.2.4.min.js"
 integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
 crossorigin="anonymous"></script>
-
+<script type="text/javascript" src="bootstrap.js"></script>
+<link rel="stylesheet" type="text/css" href="bootstrap.css"></link>
 </head>
 <label> Input your name: </label><input type="text" id="name">
 <button onclick="set()">Submit</button>
